# logos

./: .gitignore  CMakeLists.txt  Makefile  MyLang  README.md  main.c  test.json
ast/: ast.c  ast.h
compiler/: analyser.c  analyser.h  compiler.c  compiler.h
grammar/: lexer.l  parser.y
include/: cJSON.c  cJSON.h
lang/: config.lng  enum  for-loop  if-statement  interface.lng  main.lng  mylang.lng  object.lng  test.lng
lang/src/: Interface.lgs  Main.txt  Object.lgs  enum.lgs  for-loop.txt  function.txt  if-statement.lgs  if-statement.txt  interface.lgs  object.lgs  object.lng  test.lgs  test.txt
lang/src/package/: enum.txt
src/: config.h
src/analyser/: analyser.c  analyser.h  analysis.c  analysis.h  errors.h  object_analyser.c  object_analyser.h
src/ast/: ast.c  ast.h  rule_type.h  token_types.h  tree.c  tree.h
src/codegen/: code.c  code_generator.c  code_generator.h
src/compiler/: analyser.c  analyser.h
src/executor/: executor.c  executor.h
src/lang/: object.c
src/project/: application.c  project.c  project.h
src/types/: expr.c  expr.h  field.c  field.h  interface.c  interface.h  local_declaration.c  local_declaration.h  method.c  method.h  object.c  object.h  statement.c  statement.h  type.c  type.h  types.h  variable.c  variable.h
src/utils/: hash.c  hashmap.c  hashmap.h  json_ast.c  json_ast.h  utils.c  utils.h
utils/: utils.c  utils.h
